Fixed overflow on introduction section

--- a/styles/style.css
+++ b/styles/style.css
@@ -207,7 +207,8 @@ h1, h2{
 	display: flex;
 	flex-direction: column;
 	color: white;
-	height: 65vh;
+	min-height: 65vmax;
+	justify-content: space-evenly;
 	width: 100vw;
 	background: url('../images/backgroundPic.jpeg') no-repeat center;
 	background-size: cover;
@@ -224,20 +225,20 @@ h1, h2{
 
 #profilePic{
 	align-self: center;
-	margin-top: 100px;
+	margin-top: 50px;
 	display: inline-block;
-	height: 230px;
-	width: 230px;
+	height: 300px;
+	width: 300px;
 	border-radius: 5%;
 }
 
-#introduction > h1, #introduction > h3{
+#introduction h1, #introduction h3{
 	text-align: center;
 	height: 10%;
 }
 
-#introduction > h1{
-	margin-top: 7.5%;
+#introduction h1{
+	/* margin-top: 4%; */
 	margin-bottom: -1.0%;
 	font-family: 'Roboto Slab', serif;
 }
